# p

./: .gitignore  Binptest_merge.txt  Cargo.toml  README.md  context7.json  dist-workspace.toml
.github/workflows/: release.yml
docs/: README.md  advanced.md  configuration.md  getting-started.md  index.md  portable-commands.md  smart-caching.md  task-runner.md
scripts/: init.ps1  init.sh
src/: cli.rs  config.rs  logger.rs  main.rs  utils.rs
src/handlers/: clean.rs  env.rs  info.rs  init.rs  jump.rs  list.rs  mod.rs  shell.rs  task.rs
src/pas/: ast.rs  context.rs  executor.rs  mod.rs  parser.rs  tests.rs
src/pas/commands/: adapter.rs  builtin.rs  mod.rs  system.rs
src/pas/commands/builtins/: common.rs  mod.rs
src/pas/commands/builtins/env/: cd.rs  exit.rs  export.rs  mod.rs  source.rs
src/pas/commands/builtins/fs/: cp.rs  ls.rs  mkdir.rs  mod.rs  mv.rs  rm.rs
src/pas/commands/builtins/io/: cat.rs  echo.rs
src/runner/: cache.rs  common.rs  mod.rs  portable.rs  task.rs
src/runner/handler/: cat.rs  cp.rs  ls.rs  mkdir.rs  mod.rs  mv.rs  rm.rs
wix/: main.wxs
