[package]
name = "pavidi"
version = "0.1.0"
edition = "2024" 

[dependencies]
# CLI Argument Parser (v4 still good)
clap = { version = "4.5", features = ["derive"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

# Error Handling
anyhow = "1.0"

# Terminal Colors
colored = "3.0"

# Command Line Parsing (safe splitting)
shell-words = "1.1"

# Glob pattern matching
glob = "0.3"

# Rayon
rayon = "1.11"

# Env file loading (Robust & Standard)
dotenvy = "0.15"

# Logging
log = "0.4"
env_logger = "0.11"
which = "8.0.0"
wait-timeout = "0.2.1"

# Hashing for Smart Cache
blake3 = "1.8"

# Regex for Env Var Interpolation
regex = "1.12"

# Parser Combinator
nom = "7.1"

# OS Pipes
os_pipe = "1.2"
