[package]
name = "pavidi"
version = "0.1.0-preview.2"
description = "A task runner."
license = "Apache-2.0"
readme = "README.md"
edition = "2024" 
authors = ["CodeTease"]
repository = "https://github.com/CodeTease/p"

[package.metadata.wix]
upgrade-guid = "100DB47A-429D-428B-95DF-214CCFC773A9"
path-guid = "E3F41D03-35F5-44CA-B2A6-7D8AD351941E"
license = false
eula = false

[[bin]]
name = "p"
path = "src/main.rs"

[dependencies]
# CLI Argument Parser 
clap = { version = "4.5", features = ["derive"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"

# Error Handling
anyhow = "1.0"

# Terminal Colors
colored = "3.0"

# Command Line Parsing (safe splitting)
shell-words = "1.1"

# Glob pattern matching
glob = "0.3"

# Rayon
rayon = "1.11"

# Env file loading (Robust & Standard)
dotenvy = "0.15"

# Logging
log = "0.4"
env_logger = "0.11"
which = "8.0.0"
wait-timeout = "0.2.1"

# Hashing for Smart Cache
blake3 = "1.8"

# Regex for Env Var Interpolation
regex = "1.12"

# Signal Handling
ctrlc = "3.5"
chrono = { version = "0.4", features = ["serde"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
